<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:orientation="vertical"
    tools:context=".RegisterScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleLoginScreen"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/inputEmail"
        android:layout_marginTop="100dp"
        android:background="#eee"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/inputPassword"
        android:layout_marginTop="20dp"
        android:background="#eee"/>

    <EditText
        android:id="@+id/et_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/inputConfirmPassword"
        android:layout_marginTop="20dp"
        android:background="#eee"/>

    <Button
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/buttonRegister"
        android:id="@+id/bt_register"/>

</LinearLayout>